[project]
name = "pykmn"
version = "0.0.1"
authors = [
  { email="annika0uwu@gmail.com" },
]
description = "Python bindings for the @pkmn engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["cffi>=1.0.0"]

[project.urls]
"Homepage" = "https://github.com/AnnikaCodes/pykmn"
"Bug Tracker" = "https://github.com/AnnikaCodes/pykmn/issues"

[build-system]
requires = ["setuptools>=61.0", "cffi>=1.0.0", "requests>=2.28.2"]
build-backend = "setuptools.build_meta"