[project]
name = "pykmn"
version = "0.0.1"
authors = [
  { email="annika0uwu@gmail.com" },
]
description = "Python bindings for the @pkmn engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["cffi>=1.15.1"]

[project.urls]
"Homepage" = "https://github.com/AnnikaCodes/PyKMN"
"Bug Tracker" = "https://github.com/AnnikaCodes/PyKMN/issues"

[build-system]
requires = ["setuptools>=61.0", "cffi>=1.15.1", "requests>=2.28.2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100